# musee

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: audio.rs  cli.rs  encoding.rs  fsutil.rs  genre.rs  main.rs  output.rs  text.rs  transfer.rs
src/commands/: add.rs  dedupe.rs  mod.rs  repair.rs  tag.rs
