[package]
name = "musee"
version = "0.1.0"
edition = "2024"
description = "Music library organizer and repair CLI"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.4"
metaflac = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "io-util", "rt-multi-thread", "time"] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
