[package]
name = "musee"
version = "0.3.0"
edition = "2024"
description = "Music library organizer and repair CLI"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
metaflac = "0.2.8"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["fs", "io-util", "rt-multi-thread", "time"] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
